update ticket workflow firstname and last name

--- a/src/app/ticket-workflow/ticket-workflow.component.html
+++ b/src/app/ticket-workflow/ticket-workflow.component.html
@@ -20,7 +20,7 @@
                  <img style="border-radius: 50%;" width="50" height="50" [src]="user.avatar" alt="">
                </td>
                <td>
-                 {{user.first_name}}
+                 {{user.first_name + ' ' + user.last_name}}
                </td>
             </tr>
           </table>  
