--- a/src/app/dashboard-tickets/dashboard-tickets.component.html
+++ b/src/app/dashboard-tickets/dashboard-tickets.component.html
@@ -31,7 +31,7 @@
                         <div style="float:left;">
                             <span >{{customer.staff}} | <b>{{customer.created_date}}</b></span>
                             <br>
-                              <span>{{customer.objectid}}</span>
+                              <span>{{(customer.objectid) ? customer.objectid : 0}}</span>
                             <br>
                             <span  >{{
                               ((customer.cfirst_name) ? (((customer.cfirst_name.length > 9) ? (customer.cfirst_name | slice:0:9) +'..' : customer.cfirst_name) + ' ' + ((customer.clast_name.length > 9) ? (customer.clast_name | slice:0:9)+'..' : customer.clast_name)) : '')
