Added Full Screen display for quick pick

--- a/src/app/full-screen-pick/full-screen-pick.component.html
+++ b/src/app/full-screen-pick/full-screen-pick.component.html
@@ -1,3 +1,8 @@
-<p>
-  full-screen-pick works!
-</p>
+<div id="overlay">
+  <div id="container">
+      <button (click)="_onCloseWindow()" id="close" class="button cycle-button pull-right">X</button>
+      <img class="thumb" [src]="src"  width="640" height="400" alt="">
+      
+  </div>
+  
+</div>
