--- a/src/app/quick-pick-tools/quick-pick-tools.component.html
+++ b/src/app/quick-pick-tools/quick-pick-tools.component.html
@@ -40,3 +40,6 @@
           </select> -->
         </div>
 </div>
+<div *ngIf="onCloseEditPick" id="editPick" class="container">
+  <!-- <editing-quick-pick [path]="filepath" [src]="pic" (onClose)="onCloseEditPick = false;"></editing-quick-pick> -->
+</div>
