--- a/src/app/quick-search/quick-search.component.html
+++ b/src/app/quick-search/quick-search.component.html
@@ -1,3 +1,56 @@
-<p>
-  quick-search works!
-</p>
+<div >
+    <div  class="dataTables_filter"><input [(ngModel)]="searchTable" (keyup.enter)="quickSearch()" type="search" placeholder="Quick Search..."></div>
+    <table class="dataTable striped border bordered"  style="display: table;" >
+        <thead>
+            <tr role="row">
+              <th  rowspan="1" colspan="1"  style="width: 0px;">View</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Ticket #</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Created By</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Cst Fl Name</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Cst FName</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Cst LName</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Land Line</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Alt Tel</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Alt 2 Tel</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Alt 3 Tel</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Alt 4 Tel</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Ow Fl Name</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Ow FName</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Ow LName</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Sub</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Blck #</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Lt #</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Tax Account</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Property Id</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Full Address</th>
+              <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">MSAG Comm</th>
+            </tr>
+         </thead><tbody>
+           <tr role="row" *ngFor="let data of dataTable; let index =index;let isOdd=even;let isEven=odd" [class.odd]="isOdd" [class.even]="isEven">
+              <td class="sorting_1">
+                 <a routerLink="/home/ticketView/{{data.id_ticket}}">Open</a>
+              </td>
+              <td>{{data.objectid}}</td>
+              <td>{{data.user}}</td>
+              <td>{{data.cfull_name}}</td>
+              <td>{{data.cfirst_name}}</td>
+              <td>{{data.clast_name}}</td>
+              <td>{{data.telephone_land_line}}</td>
+              <td>{{data.alt_telephone}}</td>
+              <td>{{data.alt2_telephone}}</td>
+              <td>{{data.alt3_telephone}}</td>
+              <td>{{data.alt4_telephone}}</td>
+              <td>{{data.pfull_name}}</td>
+              <td>{{data.pfirst_name}}</td>
+              <td>{{data.plast_name}}</td>
+              <td>{{data.subdivision}}</td>
+              <td>{{data.block_num}}</td>
+              <td>{{data.lot_num}}</td>
+              <td>{{data.tax_account_num}}</td>
+              <td>{{data.property_id}}</td>
+              <td>{{data.full_address}}</td>
+              <td>{{data.msag_comm}}</td>
+           </tr>
+      </tbody>
+    </table>
+    </div>
