--- a/src/app/quick-search/quick-search.component.html
+++ b/src/app/quick-search/quick-search.component.html
@@ -1,4 +1,5 @@
 <div >
+    <app-master-loading [regularLoading]="true" *ngIf="isLoading"></app-master-loading>
     <div  class="dataTables_filter"><input [(ngModel)]="searchTable" (keyup.enter)="quickSearch()" type="search" placeholder="Quick Search..."></div>
     <table class="dataTable striped border bordered"  style="display: table;" >
         <thead>
@@ -28,9 +29,9 @@
          </thead><tbody>
            <tr role="row" *ngFor="let data of dataTable; let index =index;let isOdd=even;let isEven=odd" [class.odd]="isOdd" [class.even]="isEven">
               <td class="sorting_1">
-                 <a routerLink="/home/ticketView/{{data.id_ticket}}">Open</a>
+                 <a routerLink="/home/ticketView/{{data.id_ticket}}">Open Ticket</a>
               </td>
-              <td>{{data.objectid}}</td>
+              <td>{{ (data.objectid) ? data.objectid : 'OLD TICKET'}}</td>
               <td>{{data.user}}</td>
               <td>{{data.cfull_name}}</td>
               <td>{{data.cfirst_name}}</td>
