fix the close right menu click

--- a/src/app/dashboard-tickets/dashboard-tickets.component.html
+++ b/src/app/dashboard-tickets/dashboard-tickets.component.html
@@ -19,8 +19,8 @@
 
         <div id="menuAll" #rightMenu  class="window" style="position: absolute;display: none;z-index:3;top:0px; left:0px;width:120px; height:180px;">
           <div class="window-content" >
-              <span (click)="closemenu('#menuAll')" class="place-right" style="cursor: pointer">
-                <span class="mif-cross"></span>
+              <span (click)="closemenu()" class="place-right" style="cursor: pointer">
+                <i class="fa fa-times-circle"></i>
               </span>
               <br>
               <div class="listview">
