--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -13,7 +13,7 @@
        </div>
     </div>
 </div>
-<app-ticket-workflow *ngIf="displayWorkflow" (onClose)="displayWorkflow = false;" [routing]="attributes.system_assign" [staffId]="attributes.started_ticket"></app-ticket-workflow>
+<app-ticket-workflow *ngIf="displayWorkflow" (onClose)="displayWorkflow = false;" [sentto]="attributes.sentto" [routing]="attributes.system_assign" [staffId]="attributes.started_ticket"></app-ticket-workflow>
 <app-file-uploader (changeConfig)="fileUploaderActions($event)" *ngIf="showFileUploader" [objectid]='attributes.id_ticket'></app-file-uploader>
 <file-viewer (actions)="showFileViewer = false;" [ticketid]='attributes.id_ticket' *ngIf="showFileViewer"></file-viewer>
 <app-esri-map (closeClick)="closeClick($event)" (mapEvents)="collectMapEvents($event)" [ticketEnabled]="enableTicket" [point]='loc' [polygon]='parcel' [extent]="extent" [basemap]='base'  *ngIf="isMapEnabled"></app-esri-map>
