fix open ticket on quick search

--- a/src/app/quick-search/quick-search.component.html
+++ b/src/app/quick-search/quick-search.component.html
@@ -35,7 +35,7 @@
                          <i class="fa fa-comments"></i></button>
                      </td>
                      <td class="sorting_1">
-                       <a routerLink="/home/ticketView/{{row.id_ticket}}">Open Ticket</a>
+                       <a routerLink="/ticket/view/{{row.id_ticket}}">Open Ticket</a>
                      </td>
                      <td>{{row.sentto}}</td>
                      <td>{{ (row.objectid) ? row.objectid : 'OLD TICKET'}}</td>
