--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -144,7 +144,7 @@
                                       <ul class="d-menu" data-role="dropdown">
                                           <li><a (click)="actionSendToolBar(app.toolbarActivies.TICKET_ESRI_MAP)">Basemap</a></li>
                                           <li><a (click)='actionSendToolBar(app.toolbarActivies.TICKET_ESRI_IMAGERY)'>Aerial</a></li>
-                                          <li><a (click)="displayMap('google')">Google Map</a></li>
+                                          <li><a (click)="actionSendToolBar(app.toolbarActivies.TICKET_GOOGLE_MAP)">Google Map</a></li>
                                       </ul>
                                       <br>
                                   <button (click)="actionSendToolBar(app.toolbarActivies.TICKET_LIST_ATTACHMENTS)" type="button" name="button" class="fluent-button">
