--- a/src/app/google-map/google-map.component.html
+++ b/src/app/google-map/google-map.component.html
@@ -18,9 +18,9 @@
             <i class="fa fa-window-minimize" aria-hidden="true"></i>
         </button></span>
     </div>
-    <div class="window-content" style="overflow: hidden;">
+    <div #bdy class="window-content" style="overflow: hidden;">
       <app-master-loading [regularLoading]="true" *ngIf="isLoading"></app-master-loading>
-      <div #gmap style="width:100%;height:600px;"></div>
+      <div #gmap [ngStyle]="{height: height}" style="width:100%"></div>
 
     </div>
   </div>
