--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -43,6 +43,14 @@
                                           Archive
                                       </a>
                                   </div>
+                                  <div [routerLink]="['ticket/charts']">
+                                      <a class="fluent-big-button">
+                                            <i class="fa fa-chart-bar"></i>
+                                            <i class="fa fa-chart-bar"></i>
+                                            <i class="fa fa-chart-area"></i>
+                                          Charts
+                                      </a>
+                                  </div>
                               </div>
                               <div class="tab-group-caption">Display</div>
                           </div>
