update colors on ticket charts

--- a/src/app/ticket-charts/ticket-charts.component.html
+++ b/src/app/ticket-charts/ticket-charts.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-   <canvas id="myChart" width="500" height="500"></canvas>
+    <div class="center">
+        <canvas id="myChart" width="500" height="500"></canvas>
+    </div>
 </div>
