add lazy load to filter toolbar..

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -70,7 +70,7 @@
                           <div *ngIf="_toolSettings.SECTIONS.TICKET.RECORDS.onoff" class="tab-panel-group">
                               <div class="tab-group-content">
                                   <div *ngIf="_toolSettings.SECTIONS.TICKET.RECORDS.ids.filter" class="tab-content-segment">
-                                      <a [routerLink]="['ticketTable']" class="fluent-big-button">
+                                      <a [routerLink]="['ticket/filter']" class="fluent-big-button">
                                         <!--<span class="mif-stack3"></span>-->
                                         <img src="assets/filter.png" alt="Filter Toolbar">
                                         Filter
